# oneplog

./: .clang-format  .gitignore  1.md  2.md  3.md  CMakeLists.txt  Doxyfile  README.md  README_EN.md  main.cpp  xmake.lua
.kiro/specs/oneplog/: design.md  requirements.md  tasks.md
.kiro/specs/template-logger-refactor/: design.md  requirements.md  tasks.md
.kiro/steering/: project-guidelines.md
benchmarks/: .gitkeep  CMakeLists.txt  benchmark_async.cpp  benchmark_mproc.cpp  benchmark_sync.cpp  benchmark_utils.hpp  xmake.lua
cmake/: oneplogConfig.cmake.in
docs/: .gitkeep  API.md  USAGE.md  async_mode.md  mproc_mode.md  sync_mode.md
example/: .gitkeep  CMakeLists.txt  async_example.cpp  benchmark.cpp  benchmark_array_mapping.cpp  benchmark_compare.cpp  benchmark_contention_compare.cpp  benchmark_direct_mapping.cpp  benchmark_name_lookup.cpp  benchmark_optimized_name_manager.cpp  benchmark_shadow_tail.cpp  benchmark_wfc_overhead.cpp  exec_example.cpp  fast_logger_example.cpp  logger_example.cpp  mproc_example.cpp  multithread_example.cpp  stress_test.cpp  sync_example.cpp  test_async.cpp  test_async_exact.cpp  test_async_fastlogger.cpp  test_async_format.cpp  test_async_oneplog_format.cpp  test_async_real.cpp  test_async_simple.cpp  test_async_template.cpp  test_async_variadic.cpp  wfc_example.cpp  xmake.lua
examples/: .gitkeep  CMakeLists.txt  example_async.cpp  example_mproc.cpp  example_mproc_fork.cpp  example_mproc_owner.cpp  example_mproc_worker.cpp  example_sync.cpp  xmake.lua
include/oneplog/: .gitkeep  binary_snapshot.hpp  common.hpp  fast_logger.hpp  fast_logger_v2.hpp  format.hpp  heap_memory.hpp  heap_ring_buffer.hpp  log_config.hpp  log_entry.hpp  logger.hpp  macros.hpp  memory_pool.hpp  name_manager.hpp  oneplog.hpp  pipeline_thread.hpp  registry.hpp  ring_buffer.hpp  ring_buffer.hpp.backup  shared_memory.hpp  shared_ring_buffer.hpp  sink.hpp  writer_thread.hpp
include/oneplog/benchmark/: latency_collector.hpp  performance_benchmark.hpp
include/oneplog/internal/: array_mapping_table.hpp  binary_snapshot.hpp  direct_mapping_table.hpp  fast_logger_config.hpp  fixed_name.hpp  format.hpp  heap_memory.hpp  heap_ring_buffer.hpp  log_entry.hpp  logger_config.hpp  memory_pool.hpp  optimized_name_manager.hpp  pipeline_thread.hpp  platform_lookup_table.hpp  ring_buffer.hpp  shared_memory.hpp  shared_ring_buffer.hpp  static_formats.hpp  writer_thread.hpp
include/oneplog/sinks/: sink.hpp
src/: .gitkeep  format.cpp  log_entry.cpp  logger.cpp  pipeline_thread.cpp  sink.cpp
src/oneplog/: common.cpp  heap_ring_buffer.cpp  instantiations.cpp  memory_pool.cpp  shared_ring_buffer.cpp  writer_thread.cpp
tests/: .gitkeep  CMakeLists.txt  binary_snapshot_property_test.cpp  binary_snapshot_rc_test.cpp  binary_snapshot_test.cpp  consumer_perf_test.cpp  direct_mapping_table_test.cpp  heap_ring_buffer_test.cpp  log_entry_layout_test.cpp  log_entry_test.cpp  producer_delay_benchmark.cpp  ring_buffer_performance_test.cpp  ring_buffer_property_test.cpp  ring_buffer_test.cpp  shared_ring_buffer_property_test.cpp  shared_ring_buffer_test.cpp  slot_count_benchmark.cpp  slot_layout_check.cpp  test_array_mapping_table.cpp  test_binary_snapshot.cpp  test_direct_mapping_table.cpp  test_fast_logger_config.cpp  test_fast_logger_v2.cpp  test_heap_ring_buffer.cpp  test_level.cpp  test_log_entry.cpp  test_logger.cpp  test_logger_config.cpp  test_name_manager.cpp  test_optimized_name_manager.cpp  test_shared_memory.cpp  test_shared_ring_buffer.cpp  wfc_property_test.cpp  xmake.lua
